# fingertree-interval-map

./: .gitignore  CHANGELOG.md  README.md  cabal.project  flake.nix  interval-map.cabal
src/Data/: IntervalMap.hs
src/Data/IntervalMap/: Internal.hs
test/: Main.hs
